# ROS_HMP_Collision_Avoidance

./: .gitignore  README.md
controller_pkg/: CMakeLists.txt  package.xml
controller_pkg/src/Coppelia Scenes/: franka_kinematic.ttt  franka_kinematic_hand.ttt  franka_kinematic_human.ttt  franka_kinematic_human2.ttt
controller_pkg/src/ROS_codes/: CMakeLists.txt  JacobianHMP.cpp  JacobianHMP.h  test_controller.cpp  test_controller_vfi.cpp  test_publisher.cpp  test_subscriber.cpp
controller_pkg/src/cpp_main_codes/: CMakeLists.txt  JacobianHMP.h  controller_cube_side.cpp  controller_human_avoidance.cpp  controller_test.cpp  copy_JacobianHMP.cpp  test_controller_before_robot.cpp
hmp_pkg/: CMakeLists.txt  package.xml
hmp_pkg/src/: HMP_trans_continuous.py  HMP_with_translation.py  get_pose_refactor.py
hmp_pkg/src/_vt_d_all_changes.model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
hmp_pkg/src/_vt_d_all_changes.model/variables/: variables.index
hmp_pkg/src/_vt_d_change_side.model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
hmp_pkg/src/_vt_d_change_side.model/variables/: variables.index
hmp_pkg/src/dist_no_sample_all_files_no_k.model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
hmp_pkg/src/dist_no_sample_all_files_no_k.model/variables/: variables.index
hmp_pkg/src/dist_no_sample_all_filescont.model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
hmp_pkg/src/vt_continuous.model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
hmp_pkg/src/vt_d_trans.model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
(+4 files in other folders)
